<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_loan_submit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:background="@drawable/backcooler"
    tools:context="com.csi.meghnacooler.Technician.ActivityComplainList">

    <include layout="@layout/toolbar"/>

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll_view_complain_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:scrollbarThumbHorizontal="@android:color/transparent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <!-- Segment group-->
            <info.hoang8f.android.segmented.SegmentedGroup
                android:id="@+id/segmented_group_complain_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/capsul_box_style"
                android:orientation="horizontal"
                android:layout_margin="5sp"
                segmentedgroup:sc_border_width="0dp"
                segmentedgroup:sc_checked_text_color="#fff"
                segmentedgroup:sc_corner_radius="5dp"
                segmentedgroup:sc_tint_color="@color/colorPrimary">

                <RadioButton
                    android:id="@+id/radio_button_all"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/all" />

                <RadioButton
                    android:id="@+id/radio_button_open"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open" />

                <RadioButton
                    android:id="@+id/radio_button_acceepted"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accepted" />

                <RadioButton
                    android:id="@+id/radio_button_ongoing"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ongoing" />

                <RadioButton
                    android:id="@+id/radio_button_solved"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/solved" />

                <RadioButton
                    android:id="@+id/radio_button_pending"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pending" />

            </info.hoang8f.android.segmented.SegmentedGroup>
        </LinearLayout>

    </HorizontalScrollView>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recylcerViewComplainList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-51dp"
        android:layout_marginRight="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/horizontal_scroll_view_complain_list"/>
</RelativeLayout>