<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_loan_submit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".HeadOffice.StockFragment">
    <!--segment group-->
    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/segmentedGroupSwitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="@drawable/capsul_box_style"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:paddingTop="0dp"
        android:layout_marginLeft="8dp"
        android:layout_centerHorizontal="true"
        segmentedgroup:sc_border_width="0dp"
        segmentedgroup:sc_checked_text_color="#fff"
        segmentedgroup:sc_corner_radius="5dp"
        segmentedgroup:sc_tint_color="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        >
        <RadioButton
            android:id="@+id/radioButtonAll"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:checked="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />
        <RadioButton
            android:id="@+id/radioButtonProducts"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/products"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />

        <RadioButton
            android:id="@+id/radioButtonParts"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parts"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"/>
    </info.hoang8f.android.segmented.SegmentedGroup>
    <!-- list-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recylcerViewStockList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-51dp"
        android:layout_marginRight="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/segmentedGroupSwitcher"/>
</RelativeLayout>