<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Technician.RequisitionListFragment">

    <!-- Header Level-->
    <RelativeLayout
        android:id="@+id/relativeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/small_card_black"
        android:elevation="15dp">
        <!--from & to date entry label-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center|left"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/textViewStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:textSize="@dimen/textSize12sp"
                    android:textColor="@color/white"
                    android:gravity="left"
                    android:layout_marginLeft="8dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center|left"
                    android:background="@drawable/small_card_style2"
                    android:layout_marginTop="4dp">
                    <EditText
                        android:id="@+id/editTextStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center|left"
                        android:textSize="@dimen/textSize11sp"
                        android:editable="false"
                        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                        android:textColor="@color/textColorTitleSmall"
                        android:textColorHint="@color/textColorTitleSmall"
                        android:backgroundTint="@android:color/transparent"
                        android:background="@color/textColorTitleLarge"
                        android:drawableTint="@color/colorPrimary"/>
                </LinearLayout>
            </LinearLayout>
            <Space
                android:layout_width="7dp"
                android:layout_height="5dp" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center|left"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textViewEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textSize="@dimen/textSize12sp"
                    android:textColor="@color/white"
                    android:gravity="left"
                    android:layout_marginLeft="8dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center|left"
                    android:background="@drawable/small_card_style2"
                    android:layout_marginTop="4dp">
                    <EditText
                        android:id="@+id/editTextEndDate"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center|left"
                        android:textSize="@dimen/textSize11sp"
                        android:editable="false"
                        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                        android:textColor="@color/textColorTitleSmall"
                        android:textColorHint="@color/textColorTitleSmall"
                        android:backgroundTint="@android:color/transparent"
                        android:background="@color/textColorTitleLarge"
                        android:drawableTint="@color/colorPrimary"/>
                </LinearLayout>
            </LinearLayout>
            <Space
                android:layout_width="7dp"
                android:layout_height="5dp" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_gravity="center|left"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/buttonSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shapelogin"
                    android:textSize="12sp"
                    android:text="@string/search"
                    android:textAllCaps="false"
                    android:textColor="@color/textColorTitleLarge"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>